--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,11 @@
-hello
+
+This is some text from Miranda.
+
+Here are the tasks we need to get done so far:
+	- Console Animation
+		-Requires setting a size and creating code to develop an FPS on the console
+
+	- Capturing Keycodes
+		- We need to be able to read keys in the console without using Console.Readline. It has to be real time.
+
+	- ???
