--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
-
-This is some text from Miranda.
-
 Here are the tasks we need to get done so far:
 	- Console Animation
-		-Requires setting a size and creating code to develop an FPS on the console
+		- Requires setting a size and creating code to develop an FPS on the console
+		- 11 FPS
+		- I think a set size would be easier to implement across computers
 
 	- Capturing Keycodes
 		- We need to be able to read keys in the console without using Console.Readline. It has to be real time.
 
 	- ???
+
