add details to TODO and task assignments

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,34 @@
 
-This is some text from Miranda.
-
 Here are the tasks we need to get done so far:
-	- Console Animation
+
+	- Console Animation (Frame Animation) - Miranda
 		-Requires setting a size and creating code to develop an FPS on the console
 
-	- Capturing Keycodes
+	- Capturing Keycodes - Morgan
 		- We need to be able to read keys in the console without using Console.Readline. It has to be real time.
+		- event on key press to update 
 
-	- ???
+	- Character Design - Fallen
+		- ASCII 
+         	- Alien  - 4 x 2 poses each 
+		- flying saucer
+		- player 
+		- sheild - (decimate on hit)
+       	
+	- Projectile Design - Carson
+		- player
+		- Alien
+		- flying saucer
+		- collision detect
+
+	- Track and Display Score and lives remaining - Seth
+
+
+	- Title screen animation (this could be used as a screen saver) - Jamison
+		- cheat code from contra will give player 30 lives
+
+	- Game over animation - Jessica
+		Enter Initials if in the top 10 high scores
+
+
+		
